# sa3.cpp

./: .env.example  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.cmd  build.sh  models.cmd  models.sh
docs/: ARCHITECTURE-NOTES.md  BENCHMARKS.md  DECODER-DESIGN.md  DISTRIBUTION.md  EMBEDDING.md  GGML_FORK.md  HIP.md  LOUDNESS.md  METAL.md  NON_GPU_TESTS.md  ROADMAP.md  SERVER.md  TENSOR-MAP.md  TRAINING.md  TRAINING_BENCHMARKS.md  TRAINING_WEB.md  lora_checkpoint_contract.md  tensors-medium.txt
docs/model-cards/: stable-audio-3-medium-GGUF.md  stable-audio-3-medium-base-GGUF.md  stable-audio-3-small-music-GGUF.md  stable-audio-3-small-music-base-GGUF.md  stable-audio-3-small-sfx-GGUF.md  stable-audio-3-small-sfx-base-GGUF.md  t5gemma-b-b-ul2-GGUF.md
loras/: README.md
models/: README.md
prompts/: README.md  defaults.json  kev.json  keygen.json  koan.json
src/: audio_post.h  dit.h  embedded_train_web.h  embedded_web.h  gguf_model.h  libsa3.cpp  libsa3.h  lora.h  lora_convert.h  nn.h  rng.h  sa3_pipeline.h  same_ae.h  t5gemma.h  tokenizer.h  train_audio.h  train_checkpoint.h  train_ckpt.h  train_config.h  train_dataset.h  train_diffusion.h  train_dit.h  train_inpaint.h  train_loop.h  train_lora.h  train_model_paths.h  train_optimizer.h  train_prompt.h  train_resume.h  train_svd.h  train_web_run.h  wav.h
tests/: dit_lin_functional_test.cpp  test_backend.h  train_checkpoint_test.cpp  train_config_test.cpp  train_dataset_test.cpp  train_inpaint_test.cpp  train_lora_test.cpp  train_model_paths_test.cpp  train_optimizer_test.cpp  train_prompt_test.cpp
tools/: chunk_audio_by_lyrics.py  compute_svd_bases.py  convert.py  convert_dit.py  convert_t5gemma.py  convert_tokenizer.py  cossim.py  download_models.py  dump_dit.py  dump_lora_dit.py  dump_refs.py  dump_t5gemma.py  dump_text2music.py  gen_embedded_train_web.py  gen_embedded_web.py  generate_lyric_timesheets.py  gguf_meta.py  inspect_safetensors.py  lora_ckpt_export.py  lora_spec_test.py  prepare_train_dataset.py  quantize_gguf.py  sa3-codec.cpp  sa3-dit.cpp  sa3-generate.cpp  sa3-libcancel.c  sa3-libtest.c  sa3-lora-convert.cpp  sa3-quant-check.cpp  sa3-quant-eval.cpp  sa3-quantize.cpp  sa3-server.cpp  sa3-smoke.cpp  sa3-textenc.cpp  sa3-textmusic.cpp  sa3-tokenize.cpp  sa3-train-web.cpp  sa3-train.cpp
web/: app.js  app.ts  index.html  train.html  train.js
